# CHIP-8-emulator

./: .gitignore  CMakeLists.txt  README.md
docs/: functional_spec.tex  implementation_spec.tex
docs/diagrams/: class_diagram.drawio
roms/: test.ch8
roms/test_pending/: scr_test.ch8
src/: Beeper.cpp  Beeper.h  Beeper.hpp  CHIP8.cpp  CHIP8.h  CHIP8.hpp  Display.cpp  Display.hpp  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Input.hpp  Runner.cpp  Runner.hpp  Tester.cpp  Tester.hpp  Timer.cpp  Timer.h  Timer.hpp  constants.h  main.cpp  spec.h  spec.hpp
